# linch

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/rules/: env.md  (+3 more)
docs/: ROADMAP.md  architecture.md  contributing.md  usage.md  versioning.md
examples/: 01_custom_tools.py  02_custom_permissions.py  03_system_prompts.py  04_structured_output.py  05_context_injection.py  06_multi_session.py  07_event_streaming.py  interactive_cli.py  minimal_agent.py
scripts/: benchmark_live_prompt_cache.py  benchmark_prompt_cache.py  check.sh  colab_sglang_cache_diag.py  colab_sglang_provider_test.py  colab_vllm_diagnostic.py  colab_vllm_provider_test.py  eval_benchmark.py  run_report.py
tests/: test_abort.py  test_agent_loop.py  test_backpressure.py  test_compaction_provider_agnostic.py  test_context_injection.py  test_deep_agent.py  test_eval_benchmark.py  test_evals.py  test_example_coordination.py  test_example_interaction.py  test_example_ralph_loop.py  test_example_redis_mailbox.py  test_example_research_desk.py  test_example_runner_recipes.py  test_extension_contracts.py  test_extension_templates.py  test_hardening.py  test_hooks.py  test_input_aware_concurrency.py  test_live_api.py  test_live_prompt_cache_benchmark.py  test_loop_runner.py  test_multitenancy.py  test_openai_responses.py  test_parity_surface.py  test_pricing.py  test_prompt_cache_benchmark.py  test_public_api.py  test_recipes.py  test_registry_ext.py  test_reports.py  test_run_report_script.py  test_sessions.py  test_structured_output.py  test_system_blocks.py  test_tool_deps.py  (+1 more)
(+389 files in other folders)
