[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "linch"
version = "1.0.2"
description = "Production grade agentic harnessing SDK."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "CallMeZuy", email = "duyfaker01@gmail.com" }]
dependencies = [
  "openai>=1.0.0",
  "PyYAML>=6.0",
  "typing_extensions>=4.10",
]

[project.urls]
Homepage = "https://github.com/DuyTa506/linch"
Repository = "https://github.com/DuyTa506/linch"

[project.optional-dependencies]
mcp = [
  "mcp>=1.0.0",
]
anthropic = [
  "anthropic>=0.30.0",
]
otel = [
  "opentelemetry-api>=1.20",
  "opentelemetry-sdk>=1.20",
]
gemini = [
  "google-generativeai>=0.8.0",
]
postgres = [
  "asyncpg>=0.29",
]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "pytest-timeout>=2.3",
  "ruff>=0.5",
  "pyright>=1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/linch"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
# Follow-up: expand this gate to tests and examples after shipped src stays clean.
include = ["src"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = false
